# cmake-for-building-large-cpp-project

src/101first_cmake/: 101first_cmake.cpp  CMakeLists.txt  README.md
src/102cmake_dynamic_lib/: CMakeLists.txt  README.md
src/102cmake_dynamic_lib/test_xlog/: test_xlog.cpp
src/102cmake_dynamic_lib/xlog/: xlog.cpp  xlog.h
src/102cmake_lib/test_xlog/: CMakeLists.txt
src/102cmake_lib/xlog/: CMakeLists.txt  xlog.h
src/103message/: CMakeLists.txt  test_message.cpp
src/104test_ver/: CMakeLists.txt
src/105message_color/: CMakeLists.txt
src/106cmake_system_ver/: CMakeLists.txt  xlog.h
src/107cmake_include/: CMakeLists.txt
src/107cmake_include/cmake/: test_cmake.cmake
src/108auto_src_h/: CMakeLists.txt  main.cpp
src/108auto_src_h/include/: xlog.h  xtest.h  xthread.hpp
src/108auto_src_h/src/: xlog.cpp  xtest.c  xthread.cc
src/109cmake_out/: CMakeLists.txt
src/109cmake_out/xlog/: xlog.h
src/110add_subdirectory/: CMakeLists.txt
src/110add_subdirectory/test_xlog/: CMakeLists.txt
src/110add_subdirectory/xlog/: CMakeLists.txt
src/201cmake_if/: CMakeLists.txt
src/202cmake_cache/: CMakeLists.txt
src/202cmake_cache/sub1/: CMakeLists.txt
src/202cmake_cache/sub2/: CMakeLists.txt
src/203cmake_property/: CMakeLists.txt  main.cpp
src/203cmake_property/sub1/: CMakeLists.txt
src/203cmake_property/sub2/: CMakeLists.txt
src/204cmake_env/: CMakeLists.txt
src/204cmake_env/sub1/: CMakeLists.txt
src/205cmake_math/: CMakeLists.txt
src/206cmake_string/: CMakeLists.txt
src/207cmake_list/: CMakeLists.txt
src/208cmake_foreach_while/: CMakeLists.txt
src/209cmake_macro/: CMakeLists.txt
src/210cmake_function/: CMakeLists.txt  main.c
src/210cmake_function/sub1/: CMakeLists.txt
src/301cmake_exp/: CMakeLists.txt  cmake_exp.cpp
src/401cmake_target_include/: B.cpp  CMakeLists.txt  a.cpp  b.cpp  main.cpp
src/402target_compile_features/: CMakeLists.txt  READ.md
src/403target_object/: CMakeLists.txt  a.cpp  b.cpp  main.cpp
src/404cmake_version/: CMakeLists.txt  main.cpp
src/405cmake_debug_release/: CMakeLists.txt
src/405cmake_debug_release/include/: dlib.h
src/405cmake_debug_release/src/: dlib.cpp  main.cpp  slib.cpp
src/406cmake_vs_multithreaded/: CMakeLists.txt  main.cpp  slib.cpp
src/407cmake_vs_group/: CMakeLists.txt
